Fix site navigation items alignment on mobile-menu

--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -82,9 +82,11 @@
   }
 
   &__item {
-    &:first-child,
-    &:last-child {
-      margin-left: auto;
+    @media screen and (min-width: abstracts.$lg) {
+      &:first-child,
+      &:last-child {
+        margin-left: auto;
+      }
     }
   }
 
